[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://SFX/MX Lose Sound.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/MX Button Click.mp3" type="AudioStream" id=3]
[ext_resource path="res://SFX/MX Button Hover.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Other/BebasNeue-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[node name="Death" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer1" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundColor" type="ColorRect" parent="Control/CenterContainer1"]
margin_left = 490.0
margin_top = 210.0
margin_right = 790.0
margin_bottom = 510.0
rect_min_size = Vector2( 300, 300 )
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer1"]
margin_left = 585.0
margin_top = 289.0
margin_right = 694.0
margin_bottom = 431.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Control/CenterContainer1/VBoxContainer"]
margin_right = 109.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "You Died"
align = 1
valign = 1

[node name="Control" type="Control" parent="Control/CenterContainer1/VBoxContainer"]
margin_top = 56.0
margin_right = 109.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 10 )

[node name="RestartButton" type="Button" parent="Control/CenterContainer1/VBoxContainer"]
margin_top = 74.0
margin_right = 109.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="QuitButton" type="Button" parent="Control/CenterContainer1/VBoxContainer"]
margin_top = 112.0
margin_right = 109.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="PlayerDeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.136
pitch_scale = 1.16

[node name="PressedSFX" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = 7.704
pitch_scale = 1.27

[node name="HoveredSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.139
pitch_scale = 1.3

[connection signal="mouse_entered" from="Control/CenterContainer1/VBoxContainer/RestartButton" to="." method="_on_RestartButton_mouse_entered"]
[connection signal="pressed" from="Control/CenterContainer1/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="mouse_entered" from="Control/CenterContainer1/VBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="Control/CenterContainer1/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="PressedSFX" to="." method="_on_PressedSFX_finished"]
